--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta property="og:image:alt" content="A teddy bear"/>
     
     
-    <title>tiutloPagina</title>
+    <title>CE</title>
 </head>
 <body>
     <h1>Pagina de prueba</h1>
